Changelog:
Versions without changelogs probably had very small misc fixes, like tweaks to the source code

Key:
  + Addition
  = Fix
  ! Change
  - Removal
Version 2.1.7
    Fixed an almost 6 year old bug where Salvage materials did not have a defined material count so they defaulted to 2 (which could lead to shovels giving back more diamonds than normal)
    (API) Added addXpFromBlocks to ExperienceAPI to help make adding XP for a player easier
    (API) Added addXpFromBlocksBySkill to ExperienceAPI to help make adding XP for a player easier
    (API) Added addXpFromBlock to ExperienceAPI to help make adding XP for a player easier
    (API) Added addXpFromBlockBySkill to ExperienceAPI to help make adding XP for a player easier

Version 2.1.6
    Fixed a bug where Arcane Salvage could never fail
    Recolored some lines in the locale related to failure from white to red
    Fixed a bug where Salvage was giving back too many resources
    SubSkillFailure renamed to SubSkillFailed in config.yml
    SubSkillFailed now sends copies to chat by default
    SubSkillFailed no longer sends messages to the action bar by default

Version 2.1.5
    mcMMO no longer ignores cancelled events relating to the player left or right clicking

Version 2.1.4
    Fixed a bug where Alchemy didn't gain XP
    Fixed a bug where Archery gained XP from mob spawned entities
    Fixed a display bug with Roll on /acrobatics command
    Fixed a display bug for bite chance on Fishing
    Fixed a display bug for treasure drop chances on Fishing
    Fixed a display bug for Arcane Forging on Repair
    Fixed a display bug for Super Repair on Repair
    Fixed a display bug for Repair Mastery on Repair
    Fixed a display bug for Second Smelt on Smelting
    Repair Mastery now uses a rank system
    Super Repair now uses a rank system
    Changed the stat for bite chance to be more clear that its additive chance
    Fixed Styling for the /salvage command
    Temporarily disabled Flux Mining