@@ -8,6 +8,7 @@ Key:
   - Removal
 Version 2.1.7
     Fixed an almost 6 year old bug where Salvage materials did not have a defined material count so they defaulted to 2 (which could lead to shovels giving back more diamonds than normal)
+    Added spam detection for Unarmed's bonus damage and disarm
     (API) Added addXpFromBlocks to ExperienceAPI to help make adding XP for a player easier
     (API) Added addXpFromBlocksBySkill to ExperienceAPI to help make adding XP for a player easier
     (API) Added addXpFromBlock to ExperienceAPI to help make adding XP for a player easier
